Come back and fix the overflow-x issue on small devices

--- a/src/home/Home.css
+++ b/src/home/Home.css
@@ -1,3 +1,21 @@
 .col {
     border: 1px solid var(--gold);
 }
+
+.tv-box {
+    height: 350px;
+}
+
+.coming-soon {
+    height: 150px;
+    margin-bottom: 2rem;
+}
+
+.coming-soon .col p {
+    padding-top: 2rem;
+    font-size: 2.3rem;
+}
+.coming-soon p .lead {
+    padding-left: 1rem;
+    font-size: 1rem;
+}
