--- a/src/index.css
+++ b/src/index.css
@@ -11,11 +11,13 @@
 *::after {
     font-size: 15px;
     color: #fff;
+    box-sizing: border-box;
 }
 
 body {
-    background: top left/cover url("./images/BCU\ WEBSITE\ BACKGROUND2.jpg") !important;
+    background: top left/cover url("./images/BCU\ WEBSITE\ BACKGROUND2.jpg");
     margin: 0;
     /* font-family: "poppins", sans-serif; */
     font-family: "poppins", sans-serif !important;
+
 }
